<resources>
    <string name="app_name">ChatBox</string>
    <string name="login">Login</string>
    <string name="need">need</string>
    <string name="need_an_account">Need an account?</string>
    <string name="login_page">Login Page</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="sing_up">SING UP</string>
    <string name="loginm">LOGIN</string>
    <string name="enter_username">Enter Username</string>
</resources>