<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDE4E8"
    tools:context=".login">

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="262dp"
        android:layout_height="55dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="114dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="13dp"
        android:text="CONFIRM PASSWORD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="13dp"
        android:text="PASSWORD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="135dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="7dp"
        android:text="EMAIL"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="250dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:textColorHint="#607D8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/profilerg" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/delius_swash_caps"
        android:text="Create New Account"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/profilerg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilerg"
        android:layout_width="239dp"
        android:layout_height="235dp"
        android:src="@drawable/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/button"
        android:layout_width="395dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0E0808"
        android:text="@string/sing_up"
        android:textColor="#E3DDDD"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="395dp"
        android:layout_height="61dp"
        android:backgroundTint="#0E0808"
        android:text="@string/loginm"
        android:textColor="#E3DDDD"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="128dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:text="USER NAME"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilerg" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="252dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Enter email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="262dp"
        android:layout_height="55dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

</androidx.constraintlayout.widget.ConstraintLayout>